{
    "name": "Controls",
    "maps": [
        {
            "name": "Std",
            "id": "d60cadf7-b25d-4291-a29c-2ba46fb020dd",
            "actions": [
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "24911351-9c0d-408b-8189-3859cc8ba077",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "ef0b7608-367e-4570-b2ce-d6a35ff20db2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CycleForward",
                    "type": "Button",
                    "id": "694c7c4a-e871-41f7-a87d-221d8cf8186a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CycleBackward",
                    "type": "Button",
                    "id": "dac6b945-2a24-4885-b2e0-667a80ebbf2a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseAbility",
                    "type": "Button",
                    "id": "9e6ecec5-9ba9-424b-afad-ad260a401d38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerMovement",
                    "type": "Button",
                    "id": "82743f9d-170d-48f9-a6fe-2693408a456e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "221a87b6-cfa1-4c9b-8f46-a71be4f077af",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrowBomb",
                    "type": "Button",
                    "id": "9b3baa74-4695-4ad5-a0d6-8889dee27e25",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrowStickyBomb",
                    "type": "Button",
                    "id": "50a28c85-c04d-43c0-9562-74ba2cac90e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability_1",
                    "type": "Button",
                    "id": "68ef1dc6-80cb-4c4f-b91c-c4012572ee18",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability_2",
                    "type": "Button",
                    "id": "7070ea32-8712-4d0c-aeae-5e7814fd3d15",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability_3",
                    "type": "Button",
                    "id": "83c4b56b-5f4f-40be-958a-9d5e037a884c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability_4",
                    "type": "Button",
                    "id": "60f8147c-2100-4e0d-ba63-3732930ef2d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "27379058-b8e9-4fa6-98d1-c75ab21560c3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "f6aba9d6-4ace-4a69-93fd-6d9a85104c9e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7298180e-5dd6-45a0-b02e-168d2d6cd7ac",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b3958f6b-2542-489d-a57b-463439173aee",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2ea900bd-33e4-4d45-8655-a5eec4f7effd",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49dab366-a251-4793-add3-313c6f05b54d",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7cb84d7c-3119-444b-b4a6-a3bb86d46bfb",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Horizontal",
                    "id": "de5da59d-67a7-47f2-a6a6-0d88d3e917e3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2d58ed86-2302-4ea1-ae81-04aad3c54435",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f19a2585-48ed-4608-bebd-930bcd9e8ec1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6167b7bf-b60a-45bf-94d3-2213b13bd926",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4993a4b-4870-4e92-8aeb-a40e6a21a450",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowBomb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f71d3dda-ba90-4950-a287-f4d4488ebb28",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowStickyBomb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e936a6cc-6f82-4aa0-87f3-060871a33d7f",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c60290c0-b5e2-45de-bade-a8a34ce60a29",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59a43279-2484-4d9a-9f29-43a18b908867",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12c612aa-3ca7-4302-8dc9-9201cd7fb8d3",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability_4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "5a03c1c7-b6b3-466b-9afc-d8b3cd03ea1c",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "48999b81-673e-4728-b513-a999a877c9f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PauseMenu",
                    "type": "Button",
                    "id": "bbad80d2-cab2-426d-9b1b-04f5cad9a1d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DebugMenu",
                    "type": "Button",
                    "id": "0174bf39-9984-4727-b6d9-099e17e53822",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "34100f50-5a94-4f32-9e01-58f58d29861c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1b46c47-2bab-45b3-becc-c71ca76e8dd8",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ef92a55-e699-4467-90aa-dffe71373184",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DebugMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}